--- a/src/backend/user/pom.xml
+++ b/src/backend/user/pom.xml
@@ -34,13 +34,15 @@
 			<artifactId>spring-cloud-security</artifactId>
 			<version>2.1.3.RELEASE</version>
 		</dependency>
-
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-properties-migrator</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
