--- a/src/frontend/user/package.json
+++ b/src/frontend/user/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "history": "^4.10.1",
+    "history": "^4.7.2",
     "jquery": "^3.4.1",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
