--- a/src/backend/docker-compose.yml
+++ b/src/backend/docker-compose.yml
@@ -6,7 +6,14 @@ services:
   user-service:
     build: ./user
     ports:
-      - 30000:30000
+      - 9000:9000
     depends_on:
       - db
+    network: host
+  comment-service:
+    build: ./comment
+    ports:
+      - 9001:9001
+    depends_on:
+      -db
     network: host
