added dockerfile for front-end

--- a/src/backend/docker-compose.yml
+++ b/src/backend/docker-compose.yml
@@ -1,8 +1,17 @@
-version: 3
+version: '3'
 services:
   db:
     image: mysql:8.0.18
     network: host
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: '0000'
+    ports:
+      - '3306:3306'
+    expose:
+      - '3306'
+    volumes:
+      - my-db:/var/lib/mysql
   user-service:
     build: ./user
     ports:
@@ -15,5 +24,9 @@ services:
     ports:
       - 9001:9001
     depends_on:
-      -db
+      - db
     network: host
+
+# Names our volume
+volumes:
+  my-db:
