fixed java key retrieval for multiple docker images

--- a/src/backend/comment/src/main/resources/application.properties
+++ b/src/backend/comment/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=comment
 server.port=9001
 
 # Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/myweb?createDatabaseIfNotExist=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://db:3306/myweb?createDatabaseIfNotExist=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = 0000
 spring.datasource.testWhileIdle=true
