--- a/src/backend/user/src/main/resources/application.properties
+++ b/src/backend/user/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=user
 server.port=9000
 
 # Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/myweb?createDatabaseIfNotExist=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://db:3306/myweb?createDatabaseIfNotExist=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = 0000
 spring.datasource.testWhileIdle=true
